Deep repository review: modern APIs, style cleanup, and documentation fixes (#110)